--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPs+ajrUeKcbViLV5lHQlBx",
+      "authorship_tag": "ABX9TyOdg32Rd6xolnIBxRoDBCzi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,35 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/assermahmoud99/Sentiment-Analysis/blob/main/sentiment_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import kagglehub\n",
+        "\n",
+        "# Download latest version\n",
+        "path = kagglehub.dataset_download(\"karkavelrajaj/amazon-sales-dataset\",path='amazon.csv')\n",
+        "\n",
+        "print(\"Path to dataset files:\", path)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hZJMZdQZTsQn",
+        "outputId": "e971c263-7d57-43a3-b316-59036d8d9051"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using Colab cache for faster access to the 'amazon-sales-dataset' dataset.\n",
+            "Path to dataset files: /kaggle/input/amazon-sales-dataset/amazon.csv\n"
+          ]
+        }
       ]
     },
     {
@@ -55,13 +84,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_hzyX_KskaL5",
-        "outputId": "612f90e3-9623-4b3b-b442-ac5fd9acb2b7"
+        "outputId": "e2d5bea5-d616-4a54-f3b2-3ee24ad5e671"
       },
       "outputs": [
         {
@@ -84,7 +113,7 @@
         "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
         "\n",
         "nltk.download(\"vader_lexicon\") #downloading sentiment analysis model\n",
-        "df = pd.read_csv('amazon.csv') #extracting the data\n",
+        "df = pd.read_csv(path) #extracting the data\n",
         "sia = SentimentIntensityAnalyzer()\n"
       ]
     },
@@ -146,9 +175,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EbY2CdXEkGsY",
-        "outputId": "b06357ca-6ed3-4655-8bf0-130f27230fc6"
+        "outputId": "b901e0c3-8632-4191-dade-0437b5e6ff30"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,9 +239,9 @@
           "height": 397
         },
         "id": "O9z0VtU0mtX0",
-        "outputId": "0434b883-d6f7-4a51-c996-e50d3f8793fd"
+        "outputId": "4e5b88f3-d947-41a4-979e-949b75b79538"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -299,7 +328,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 8
         }
       ]
     },
@@ -348,9 +377,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ymHjfGb6xBaZ",
-        "outputId": "6bcd0b35-17cf-4112-a5ec-87b9347851f1"
+        "outputId": "f9aee92e-8be8-440d-b519-7fbd7ae36048"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,9 +452,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5BxUkbZQZsak",
-        "outputId": "9f09983d-3536-4dc0-cc23-42b695a03e48"
+        "outputId": "496a199d-746f-4476-a1fe-21e4991589fe"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,9 +532,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UeWpzvgv4A0s",
-        "outputId": "7aa1ed64-76f7-41a1-b961-cc8b23ce99de"
+        "outputId": "33bf7f96-c13e-4a7c-a57d-7f1cb496a5d0"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,7 +652,7 @@
         "id": "ZlrfnbmmPsYx",
         "outputId": "71902e50-5bb1-40f1-c079-e60fb1d8764d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
