--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdg32Rd6xolnIBxRoDBCzi",
+      "authorship_tag": "ABX9TyOWVg1s/nxEE2JM2yDcfQk4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 0. Downloading the Dataset from Kaggle\n",
+        "\n",
+        "Here I used KaggleHub to automatically download the Amazon Product Reviews dataset.\n",
+        "\n",
+        "*   The dataset comes with one single file contains the whole dataset.\n",
+        "*   stored it in path for loading it later with pandas.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "tiJFtlk2SLKM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import kagglehub\n",
@@ -43,7 +58,7 @@
         "id": "hZJMZdQZTsQn",
         "outputId": "e971c263-7d57-43a3-b316-59036d8d9051"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -177,7 +192,7 @@
         "id": "EbY2CdXEkGsY",
         "outputId": "b901e0c3-8632-4191-dade-0437b5e6ff30"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,13 +250,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 397
+          "base_uri": "https://localhost:8080/"
         },
         "id": "O9z0VtU0mtX0",
         "outputId": "4e5b88f3-d947-41a4-979e-949b75b79538"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -379,7 +393,7 @@
         "id": "ymHjfGb6xBaZ",
         "outputId": "f9aee92e-8be8-440d-b519-7fbd7ae36048"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +468,7 @@
         "id": "5BxUkbZQZsak",
         "outputId": "496a199d-746f-4476-a1fe-21e4991589fe"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,7 +548,7 @@
         "id": "UeWpzvgv4A0s",
         "outputId": "33bf7f96-c13e-4a7c-a57d-7f1cb496a5d0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
